Fix scrollbar style

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -76,15 +76,15 @@
 }
 
 ::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
+  //width: 6px;
+  //height: 6px;
   background-color: #7C7C7C;
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  width: 6px;
-  height: 6px;
+  //border-radius: 4px;
+  //width: 6px;
+  //height: 6px;
   background-color: #3b3a3a;
 }
 
